# logseq-to-obsidian

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
.agents/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
docs/: llm_filename_generation.md  specifications.md  verification_guide.md
examples/: property_filtering_demo.md
specs/001-logseq-obsidian-convert/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-parse-journal-blocks/: data-model.md  quickstart.md  spec.md
specs/003-refactor-module-logic/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-export-logseq-tana/: data-model.md  research.md  tasks.md
specs/004-tana-importer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/logseq_converter/: cli.py  llm.py  stats.py  utils.py
tests/: conftest.py  test_blinko_client.py  test_blinko_converter.py
tests/integration/: test_content_extraction.py  test_empty_extraction_skipping.py  test_full_vault_conversion.py  test_heading_no_list.py  test_links_extraction.py  test_tana_conversion.py
tests/unit/: test_converter.py  test_converter_content.py  test_empty_file_skipping.py  test_journal_extraction.py  test_link_property_transformation.py  test_llm.py  test_models.py  test_parser.py  test_parser_basic.py  test_parser_cleaning.py  test_parser_content.py  test_parser_no_list.py  test_property_filtering.py  test_stats.py  test_tana_converter.py  (+4 more)
(+34 files in other folders)
