[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logseq-converter"
version = "0.1.0"
description = "Convert LogSeq graph to Obsidian vault"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mistletoe>=1.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "typer>=0.20.0",
]

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
